Avoid instantiating Boolean objects.